[project]
name = "hurdle-wordle"
description = "Hurdle Wordle game environment - a Wordle variant that provides only counts of green/yellow letters"
tags = ["hurdle-wordle", "wordle", "train", "eval", "llm-testing"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "textarena",
    "datasets",
    "pytest",
    "pyarrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hurdle_wordle.py"]
